import "P_Asset.proto";
import "P_Property.proto";

package Adoter.Asset;

/////////////////////////////////////////////////////
//
// Client<->Server协议
//
// 1.Server<->Client交互通过协议Meta传送，其中包含内容类型和内容MESSAGE数据;
//
// 2.每个协议必须包含MetaType，否则双方无法处理;
//
/////////////////////////////////////////////////////

message Meta {
	optional MetaType type_t = 1;
	optional bytes stuff = 2;
}

/////////////////////////////////////////////////////
//客户端和服务器公用的数据定义区
/////////////////////////////////////////////////////

//通用错误码定义
enum ErrorCode {
	ERROR_SUCCESS = 1;	//成功
	ERROR_LOAD = 2;		//加载数据失败
}

/////////////////////////////////////////////////////
//通用协议类型
/////////////////////////////////////////////////////
enum MetaType {
	///////////客户端发送数据///////////
	META_TYPE_C2S_BEGIN = 1; //客户端开始协议
	META_TYPE_C2S_SELECT_SERVER = 3; //选择服务器
	META_TYPE_C2S_CREATE_PLAYER = 4; //创建角色
	META_TYPE_C2S_ENTER_GAME = 5; //进入游戏(选择的角色)
	META_TYPE_C2S_ENTER_SCENE = 6; //进入场景(进入游戏之后、加载完场景后发送)
	META_TYPE_C2S_MOVE = 7; //移动
	META_TYPE_C2S_COUNT = 500; //客户端协议最大数量
	///////////服务器发送数据///////////
	META_TYPE_S2C_BEGIN = 501; //服务器开始协议
	META_TYPE_S2C_TICKET = 502; //登录认证
	META_TYPE_S2C_SERVER_LIST = 503; //游戏服务器列表(AS->C)
	META_TYPE_S2C_PLAYERS = 504; //同步账号下角色数据
	META_TYPE_S2C_PLAYER_INFO = 505; //同步玩家角色数据(登录之后同步)
	META_TYPE_S2C_MUTABLE_PROPERTY = 506; //同步玩家易变属性数据
	META_TYPE_S2C_ERROR = 507; //错误码信息
	META_TYPE_S2C_COUNT = 1000; //服务器协议最大数量
}
/////////////////////////////////////////////////////
//客户端发送协议定义区
/////////////////////////////////////////////////////

//进入游戏
message EnterGame {
	optional MetaType type_t = 1 [ default = META_TYPE_C2S_ENTER_GAME ];
	optional int64 player_id = 2; //选择角色
}
/////////////////////////////////////////////////////
//服务器发送协议定义区
/////////////////////////////////////////////////////

//同步账号下角色数据
message PlayerList {
	optional MetaType type_t = 1 [ default = META_TYPE_S2C_PLAYERS ];
	repeated Player players = 2;
}
//同步玩家角色数据
message PlayerInfo {
	optional MetaType type_t = 1 [ default = META_TYPE_S2C_PLAYER_INFO ];
	optional Player player = 2;
}
//同步玩家易变数据
message MutableProperty {
	optional MetaType type_t = 1 [ default = META_TYPE_S2C_MUTABLE_PROPERTY ];
	optional int64 player_id = 2;
	optional int32 speed = 3;
	optional int32 orientation = 4;
	optional Vector3 position = 5;
}
